--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build
 on:
   push:
     branches: [master, develop, develop-deploy]
-  
+
   pull_request:
     types: [opened, synchronize, reopened]
     branches: [master, develop, develop-deploy]
@@ -26,22 +26,22 @@ jobs:
     - run: npm --prefix questions test -- --coverage
     - run: npm --prefix gatewayservice test -- --coverage
     - run: npm --prefix webapp test -- --coverage
-    - name: Analyze with SonarCloud
-      uses: sonarsource/sonarcloud-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  e2e-tests:
-    needs: [unit-tests]
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 20
-    - run: npm --prefix users install
-    - run: npm --prefix questions install
-    - run: npm --prefix gatewayservice install
-    - run: npm --prefix webapp install
-    - run: npm --prefix webapp run build
-    - run: npm --prefix webapp run test:e2e
+    # - name: Analyze with SonarCloud
+    #   uses: sonarsource/sonarcloud-github-action@master
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  # e2e-tests:
+  #   needs: [unit-tests]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v4
+  #   - uses: actions/setup-node@v4
+  #     with:
+  #       node-version: 20
+  #   - run: npm --prefix users install
+  #   - run: npm --prefix questions install
+  #   - run: npm --prefix gatewayservice install
+  #   - run: npm --prefix webapp install
+  #   - run: npm --prefix webapp run build
+  #   - run: npm --prefix webapp run test:e2e
