--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,13 +2,13 @@ sonar.projectKey=Arquisoft_wiq_es04a
 sonar.organization=arquisoft
 
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=wiq_es04a
+sonar.projectName=wichat_es1a
 sonar.projectVersion=1.0
 
 # Encoding of the source code. Default is default system encoding
 sonar.host.url=https://sonarcloud.io
 sonar.language=js
-sonar.projectName=wiq_es04a
+sonar.projectName=wichat_es1a
 
 sonar.coverage.exclusions=**/*.test.js,**/test-config.js
 sonar.test.exclusions=**/*.test.js,**/test-config.js
