--- a/questions/package.json
+++ b/questions/package.json
@@ -17,9 +17,11 @@
     "express": "^4.18.2",
     "mongodb-memory-server": "^9.1.7",
     "mongoose": "^8.2.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "ts-jest": "^29.2.5"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.26.0",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
