--- a/questions/package.json
+++ b/questions/package.json
@@ -2,14 +2,17 @@
   "name": "questions",
   "version": "0.0.1",
   "description": "Question generation module",
-  "main": "index.js",
+  "type": "module",
+  "main": "index.ts",
+  "allowImportingTsExtensions": true,
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "tsx index.ts",
     "test": "jest"
   },
-  "author": "wiq-es04a",
+  "author": "wichat-es1a",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^5.0.0",
     "axios": "^1.6.8",
     "axios-mock-adapter": "^1.22.0",
     "cors": "^2.8.5",
@@ -18,13 +21,17 @@
     "mongodb-memory-server": "^9.1.7",
     "mongoose": "^8.2.0",
     "node-fetch": "^3.3.2",
-    "ts-jest": "^29.2.5"
+    "ts-jest": "^29.2.5",
+    "tsx": "^4.19.3"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.26.0",
+    "@types/node": "^18.19.78",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
-    "supertest": "^6.3.4"
+    "supertest": "^6.3.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   }
 }
