--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,27 +26,27 @@ jobs:
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  e2e-tests:
-    needs: [unit-tests]
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 20
-    - run: npm --prefix users install
-    - run: npm --prefix questions install
-    - run: npm --prefix gatewayservice install
-    - run: npm --prefix webapp install
-    - run: npm --prefix webapp run build
-    - run: npm --prefix webapp run test:e2e
+  # e2e-tests:
+  #   needs: [unit-tests]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v4
+  #   - uses: actions/setup-node@v4
+  #     with:
+  #       node-version: 20
+  #   - run: npm --prefix users install
+  #   - run: npm --prefix questions install
+  #   - run: npm --prefix gatewayservice install
+  #   - run: npm --prefix webapp install
+  #   - run: npm --prefix webapp run build
+  #   - run: npm --prefix webapp run test:e2e
   docker-push-users:
     name: Push users Docker Image to GitHub Packages
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
-    needs: [e2e-tests]
+    needs: [unit-tests]
     steps:
     - uses: actions/checkout@v4
     - name: Publish to Registry
@@ -63,7 +63,7 @@ jobs:
     permissions:
       contents: read
       packages: write
-    needs: [e2e-tests]
+    needs: [unit-tests]
     steps:
     - uses: actions/checkout@v4
     - name: Publish to Registry
@@ -80,7 +80,7 @@ jobs:
     permissions:
       contents: read
       packages: write
-    needs: [e2e-tests]
+    needs: [unit-tests]
     steps:
     - uses: actions/checkout@v4
     - name: Publish to Registry
@@ -97,7 +97,7 @@ jobs:
     permissions:
       contents: read
       packages: write
-    needs: [e2e-tests]
+    needs: [unit-tests]
     steps:
     - uses: actions/checkout@v4
     - name: Publish to Registry
@@ -120,7 +120,7 @@ jobs:
     permissions:
       contents: read
       packages: write
-    needs: [e2e-tests]
+    needs: [unit-tests]
     steps:
     - uses: actions/checkout@v4
     - name: Publish to Registry
@@ -132,15 +132,17 @@ jobs:
         registry: ghcr.io
         workdir: multiplayer
   deploy:
-    name: Deploy over SSH
-    runs-on: ubuntu-latest
-    needs: [docker-push-users,docker-push-questions,docker-push-gatewayservice,docker-push-webapp, docker-push-multiplayer]
-    steps:
-    - name: Deploy over SSH
+      name: Deploy over SSH
+      runs-on: ubuntu-latest
+      needs: [docker-push-userservice,docker-push-authservice,docker-push-llmservice,docker-push-gatewayservice,docker-push-webapp]
+      steps:
+        - name: Deploy over SSH
       uses: fifsky/ssh-action@master
       with:
-        name: arquisoft/wichat_0/llmservice
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-        registry: ghcr.io
-        workdir: llmservice
+        host: ${{ secrets.DEPLOY_HOST }}
+        user: ${{ secrets.DEPLOY_USER }}
+        key: ${{ secrets.DEPLOY_KEY }}
+        command: |
+          wget https://raw.githubusercontent.com/arquisoft/wichat_es1a/master/docker-compose.yml -O docker-compose.yml
+          docker compose --profile prod down
+          docker compose --profile prod up -d --pull always
