--- a/questions/tsconfig.json
+++ b/questions/tsconfig.json
@@ -3,9 +3,8 @@
         "target": "es6",
         "esModuleInterop": true,
         "module": "commonjs",
+        "noEmit": true,
         "allowImportingTsExtensions": true,
-        "types": [
-            "node"
-        ],
+        "types": ["jest", "node"],
     }
 }
