--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -131,18 +131,35 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
         registry: ghcr.io
         workdir: multiplayer
+  docker-push-llmservice:
+    name: Push llm service Docker Image to GitHub Packages
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    needs: [unit-tests]
+    steps:
+    - uses: actions/checkout@v4
+    - name: Publish to Registry
+      uses: elgohr/Publish-Docker-Github-Action@v5
+      with:
+        name: arquisoft/wichat_es1a/llmservice
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+        registry: ghcr.io
+        workdir: llmservice
   deploy:
       name: Deploy over SSH
       runs-on: ubuntu-latest
-      needs: [docker-push-userservice,docker-push-authservice,docker-push-llmservice,docker-push-gatewayservice,docker-push-webapp]
+      needs: [docker-push-users,docker-push-llmservice,docker-push-gatewayservice,docker-push-webapp, docker-push-multiplayer]
       steps:
         - name: Deploy over SSH
-      uses: fifsky/ssh-action@master
-      with:
-        host: ${{ secrets.DEPLOY_HOST }}
-        user: ${{ secrets.DEPLOY_USER }}
-        key: ${{ secrets.DEPLOY_KEY }}
-        command: |
-          wget https://raw.githubusercontent.com/arquisoft/wichat_es1a/master/docker-compose.yml -O docker-compose.yml
-          docker compose --profile prod down
-          docker compose --profile prod up -d --pull always
+          uses: fifsky/ssh-action@master
+          with:
+            host: ${{ secrets.DEPLOY_HOST }}
+            user: ${{ secrets.DEPLOY_USER }}
+            key: ${{ secrets.DEPLOY_KEY }}
+            command: |
+              wget https://raw.githubusercontent.com/arquisoft/wichat_es1a/master/docker-compose.yml -O docker-compose.yml
+              docker compose --profile prod down
+              docker compose --profile prod up -d --pull always
