--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@ on:
     types: [opened, synchronize, reopened]
     branches: [master]
 
+  workflow_dispatch:
+
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
