--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,15 +19,10 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: 20
-    - run: npm --prefix users ci
-    - run: npm --prefix questions ci
-    - run: npm --prefix gatewayservice ci
-    - run: npm --prefix webapp ci
-    - run: npm --prefix multiplayer ci
-    - run: npm --prefix users test -- --coverage
-    - run: npm --prefix questions test -- --coverage
-    - run: npm --prefix gatewayservice test -- --coverage
-    - run: npm --prefix webapp test -- --coverage
+    - run: npm --prefix users ci && npm --prefix users test -- --coverage
+    - run: npm --prefix questions ci && npm --prefix questions test -- --coverage
+    - run: npm --prefix gatewayservice ci && npm --prefix gatewayservice test -- --coverage
+    - run: npm --prefix webapp ci && npm --prefix webapp test -- --coverage
 
     - name: Analyze with SonarCloud
       uses: sonarsource/sonarcloud-github-action@master
