--- a/llmservice/package.json
+++ b/llmservice/package.json
@@ -13,10 +13,9 @@
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "supertest": "^7.1.0"
-  },
-  "scripts": {
+  },  "scripts": {
     "start": "node src/llm-service.js",
-    "test": "npx jest"
+    "test": "npx jest --coverage"
   },
   "jest": {
     "transformIgnorePatterns": [
