--- a/gatewayservice/monitoring/prometheus/prometheus.yml
+++ b/gatewayservice/monitoring/prometheus/prometheus.yml
@@ -1,6 +1,6 @@
 global:
   scrape_interval: 5s
 scrape_configs:
-  - job_name: "wiq-es04-nodejs-app"
+  - job_name: "wichat-es1a-nodejs-app"
     static_configs:
       - targets: ["gatewayservice:8000"]
