Actualizacion archivo de sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,7 @@ sonar.test.exclusions=**/*.test.js,**/test-config.js
 sonar.cpd.exclusions=**/*.test.js,**/test-config.js,**/*Game.js
 sonar.exclusions=**/*.test.js,**/test-config.js
 sonar.security.exclusions=**/*.test.js,**/test-config.js
-sonar.sources=webapp/src,users,questions,gatewayservice
+sonar.sources=webapp/src,users,questions,gatewayservice,llmservice
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=node_modules/**
 sonar.javascript.lcov.reportPaths=**/coverage/lcov.info
