Arreglo archivo sonar y quito carpetas no utilizadas

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,14 +8,22 @@ sonar.projectVersion=1.0
 # Encoding of the source code. Default is default system encoding
 sonar.host.url=https://sonarcloud.io
 sonar.language=js
-sonar.projectName=wichat_es1a
 
-sonar.coverage.exclusions=**/*.test.js,**/test-config.js
-sonar.test.exclusions=**/*.test.js,**/test-config.js
-sonar.cpd.exclusions=**/*.test.js,**/test-config.js,**/*Game.js
-sonar.exclusions=**/*.test.js,**/test-config.js
-sonar.security.exclusions=**/*.test.js,**/test-config.js
+# Source directories
 sonar.sources=webapp/src,users,questions,gatewayservice,llmservice
+
+# Tests directories and patterns
+sonar.tests=**/__tests/**,**/e2e/**
+sonar.test.inclusions=**/*.test.js,**/*.spec.js,**/*.test.ts,**/*.spec.ts
+
+# Exclusion patterns
+sonar.coverage.exclusions=**/*.test.js,**/*.test.ts,**/*.spec.js,**/*.spec.ts,**/test-config.js,**/e2e/**
+sonar.test.exclusions=**/node_modules/**
+sonar.cpd.exclusions=**/*.test.js,**/*.test.ts,**/*.spec.js,**/*.spec.ts,**/test-config.js,**/*Game.js
+sonar.exclusions=**/node_modules/**,**/coverage/**,**/docs/**,**/public/**,**/*.test.js,**/*.test.ts,**/*.spec.js,**/*.spec.ts,**/test-config.js
+sonar.security.exclusions=**/*.test.js,**/*.test.ts,**/*.spec.js,**/*.spec.ts,**/test-config.js
+
+# Encoding and reports
 sonar.sourceEncoding=UTF-8
-sonar.exclusions=node_modules/**
 sonar.javascript.lcov.reportPaths=**/coverage/lcov.info
+sonar.typescript.lcov.reportPaths=**/coverage/lcov.info
