Arreglo archivo sonar y quito carpetas no utilizadas

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,8 +12,9 @@ sonar.language=js
 # Source directories
 sonar.sources=webapp/src,users,questions,gatewayservice,llmservice
 
-# Tests directories and patterns
-sonar.tests=**/__tests/**,**/e2e/**
+# Tests directories (debe ser una lista de directorios específicos, no patrones)
+sonar.tests=webapp/e2e,users/__tests,questions/__tests,gatewayservice/__tests,llmservice/__tests
+# Patrones de inclusión/exclusión para tests
 sonar.test.inclusions=**/*.test.js,**/*.spec.js,**/*.test.ts,**/*.spec.ts
 
 # Exclusion patterns
