Arreglo archivo sonar en la parte questions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,13 +18,19 @@ sonar.tests=webapp/e2e,users/__tests,questions/__tests,gatewayservice/__tests,ll
 sonar.test.inclusions=**/*.test.js,**/*.spec.js,**/*.test.ts,**/*.spec.ts
 
 # Exclusion patterns
-sonar.coverage.exclusions=**/*.test.js,**/*.test.ts,**/*.spec.js,**/*.spec.ts,**/test-config.js,**/e2e/**
-sonar.test.exclusions=**/node_modules/**
+sonar.coverage.exclusions=**/*.test.js,**/*.test.ts,**/*.spec.js,**/*.spec.ts,**/test-config.js,**/e2e/**,**/babel.config.*,**/jest.config.*
+sonar.test.exclusions=**/node_modules/**,**/coverage/**
 sonar.cpd.exclusions=**/*.test.js,**/*.test.ts,**/*.spec.js,**/*.spec.ts,**/test-config.js,**/*Game.js
-sonar.exclusions=**/node_modules/**,**/coverage/**,**/docs/**,**/public/**,**/*.test.js,**/*.test.ts,**/*.spec.js,**/*.spec.ts,**/test-config.js
+sonar.exclusions=**/node_modules/**,**/coverage/**,**/docs/**,**/public/**,**/*.test.js,**/*.test.ts,**/*.spec.js,**/*.spec.ts,**/test-config.js,**/babel.config.*,**/jest.config.*,**/__old_tests__/**
 sonar.security.exclusions=**/*.test.js,**/*.test.ts,**/*.spec.js,**/*.spec.ts,**/test-config.js
 
 # Encoding and reports
 sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=**/coverage/lcov.info
 sonar.typescript.lcov.reportPaths=**/coverage/lcov.info
+
+# Additional configuration
+sonar.coverage.dtdVerification=false
+sonar.tests.failIfNoTests=false
+sonar.qualitygate.wait=false
+sonar.verbose=true
