--- a/webapp/package.json
+++ b/webapp/package.json
@@ -27,7 +27,7 @@
     "react-i18next": "^14.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
-    "sequelize": "^6.37.3",
+    "sequelize": "^6.37.7",
     "socket.io-client": "^4.7.5",
     "sqlite3": "^5.1.7",
     "ts-node": "^10.9.2",
@@ -66,6 +66,7 @@
     "jest": "^29.3.1",
     "jest-cucumber": "^3.0.1",
     "jest-environment-node": "^29.7.0",
+    "lazy-ass": "^2.0.3",
     "mongodb-memory-server": "^9.1.4",
     "puppeteer": "^21.11.0",
     "serve": "^14.2.1",
