--- a/webapp/package.json
+++ b/webapp/package.json
@@ -34,7 +34,7 @@
     "web-vitals": "^3.5.1"
   },  "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "prod": "serve -s build",
     "test": "react-scripts test --passWithNoTests --transformIgnorePatterns 'node_modules/(?!axios)/'",
     "test:e2e": "start-server-and-test 'node e2e/test-environment-setup.js' http://localhost:8000/health start http://localhost:3000/ \"cd e2e && jest\"",
