--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,9 @@
 name: Deploy on release
 
 on:
+  push:
+    tags:
+    - 'v[0-9]+.[0-9]+.[0-9]+'
   release:
     types: [published]
 
@@ -16,7 +19,6 @@ jobs:
     - run: npm --prefix questions ci
     - run: npm --prefix gatewayservice ci
     - run: npm --prefix webapp ci
-    - run: npm --prefix multiplayer ci
     - run: npm --prefix users test -- --coverage
     - run: npm --prefix questions test -- --coverage
     - run: npm --prefix gatewayservice test -- --coverage
@@ -26,25 +28,25 @@ jobs:
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  # e2e-tests:
-  #   needs: [unit-tests]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v4
-  #   - uses: actions/setup-node@v4
-  #     with:
-  #       node-version: 20
-  #   - run: npm --prefix users install
-  #   - run: npm --prefix questions install
-  #   - run: npm --prefix gatewayservice install
-  #   - run: npm --prefix webapp install
-  #   - run: npm --prefix webapp run build
-  #   - run: npm --prefix webapp run test:e2e
+  e2e-tests:
+    needs: [unit-tests]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
+    - run: npm --prefix users install
+    - run: npm --prefix questions install
+    - run: npm --prefix gatewayservice install
+    - run: npm --prefix webapp install
+    - run: npm --prefix webapp run build
+    - run: npm --prefix webapp run test:e2e
   docker-push-users:
     name: Push users Docker Image to GitHub Packages
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
     needs: [unit-tests]
     steps:
@@ -61,7 +63,7 @@ jobs:
     name: Push questions Docker Image to GitHub Packages
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
     needs: [unit-tests]
     steps:
@@ -78,7 +80,7 @@ jobs:
     name: Push gateway service Docker Image to GitHub Packages
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
     needs: [unit-tests]
     steps:
@@ -86,7 +88,7 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
       with:
-        name: arquisoft/wichat_es1a/gatewayservice
+        name: arquisoft/wichat_es1a/gateway-service
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         registry: ghcr.io
@@ -95,7 +97,7 @@ jobs:
     name: Push webapp Docker Image to GitHub Packages
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
     needs: [unit-tests]
     steps:
@@ -106,7 +108,7 @@ jobs:
         API_URI: http://${{ secrets.DEPLOY_HOST }}:8000
         ONLINE_URI: http://${{ secrets.DEPLOY_HOST }}:5010
       with:
-          name: arquisoft/wichat_es1a/webapp
+          name: arquisoft/wichat_es1a/web-app
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
@@ -114,28 +116,11 @@ jobs:
           buildargs: |
             API_URI
             ONLINE_URI
-  docker-push-multiplayer:
-    name: Push multiplayer service Docker Image to GitHub Packages
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    needs: [unit-tests]
-    steps:
-    - uses: actions/checkout@v4
-    - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@v5
-      with:
-        name: arquisoft/wichat_es1a/multiplayer
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-        registry: ghcr.io
-        workdir: multiplayer
   docker-push-llmservice:
     name: Push llm service Docker Image to GitHub Packages
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
     needs: [unit-tests]
     steps:
@@ -143,7 +128,7 @@ jobs:
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
       with:
-        name: arquisoft/wichat_es1a/llmservice
+        name: arquisoft/wichat_es1a/llm-service
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         registry: ghcr.io
@@ -151,14 +136,14 @@ jobs:
   deploy:
       name: Deploy over SSH
       runs-on: ubuntu-latest
-      needs: [docker-push-users,docker-push-llmservice,docker-push-gatewayservice,docker-push-webapp, docker-push-multiplayer]
+      needs: [docker-push-users,docker-push-llmservice,docker-push-gatewayservice,docker-push-webapp]
       steps:
         - name: Deploy over SSH
           uses: fifsky/ssh-action@master
           with:
             host: ${{ secrets.DEPLOY_HOST }}
             user: ${{ secrets.DEPLOY_USER }}
-            key: ${{ secrets.DEPLOY_KEY }}
+            pass: ${{ secrets.DEPLOY_KEY }}
             command: |
               wget https://raw.githubusercontent.com/arquisoft/wichat_es1a/master/docker-compose.yml -O docker-compose.yml
               docker compose --profile prod down
