--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
 
   gatewayservice:
     container_name: gatewayservice
-    image: ghcr.io/arquisoft/wichat_es1a/gatewayservice:latest
+    image: ghcr.io/arquisoft/wichat_es1a/gateway-service:latest
     profiles: ["dev", "prod"]
     build: ./gatewayservice
     depends_on:
@@ -59,7 +59,7 @@ services:
 
   llmservice:
     container_name: llmservice-wichat_es1a
-    image: ghcr.io/arquisoft/wichat_es1a/llmservice:latest
+    image: ghcr.io/arquisoft/wichat_es1a/llm-service:latest
     profiles: ["dev", "prod"]
     build: ./llmservice
     ports:
@@ -69,7 +69,7 @@ services:
 
   webapp:
     container_name: webapp
-    image: ghcr.io/arquisoft/wichat_es1a/webapp:latest
+    image: ghcr.io/arquisoft/wichat_es1a/web-app:latest
     profiles: ["dev", "prod"]
     build: ./webapp
     depends_on:
@@ -79,7 +79,7 @@ services:
     networks:
       - mynetwork
     environment:
-      REACT_APP_API_ENDPOINT: http://gatewayservice:8000
+      REACT_APP_API_ENDPOINT: http://gateway-service:8000
     restart: always
 
 
