--- a/webapp/package.json
+++ b/webapp/package.json
@@ -68,6 +68,7 @@
   "devDependencies": {
     "@testing-library/react": "^14.2.2",
     "axios-mock-adapter": "^1.22.0",
+    "cross-env": "^7.0.3",
     "expect-puppeteer": "^9.0.2",
     "jest": "^29.3.1",
     "jest-cucumber": "^3.0.1",
