--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -6,10 +6,7 @@ WORKDIR /app
 #Install the dependencies
 RUN npm install --omit=dev
 
-ARG API_URI="http://localhost:8000"
-ARG ONLINE_URI
-ENV REACT_APP_MULTIPLAYER_ENDPOINT=$ONLINE_URI
-ENV REACT_APP_API_ENDPOINT=$API_URI
+ENV IP=$IP
 
 #Create an optimized version of the webapp
 RUN npm run build
