--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -103,7 +103,6 @@ jobs:
     - name: Set env
       run: |
         echo "IP=${{ secrets.DEPLOY_HOST }}" > webapp/.env
-        sed -i "s/localhost/${{ secrets.DEPLOY_HOST }}/" webapp/src/env.js
 
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
@@ -113,6 +112,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
           workdir: webapp
+          buildargs: REACT_APP_IP=${{ secrets.DEPLOY_HOST }}
   docker-push-llmservice:
     name: Push llm service Docker Image to GitHub Packages
     runs-on: ubuntu-latest
