--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -103,7 +103,6 @@ jobs:
     - name: Set env
       run: |
         echo "IP=${{ secrets.DEPLOY_HOST }}" > webapp/.env
-
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
       with:
@@ -112,7 +111,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
           workdir: webapp
-          buildargs: REACT_APP_IP=${{ secrets.DEPLOY_HOST }}
+          buildargs: IP=${{ secrets.DEPLOY_HOST }}
   docker-push-llmservice:
     name: Push llm service Docker Image to GitHub Packages
     runs-on: ubuntu-latest
